<resources>

    <!--region Application-->
    <string name="app_name">ADRS Farmer</string>
    <string name="goole_maps_key">AIzaSyCczk1b8_C7NOm-ZXkj76y6fjBixUTV5qI</string>





    <string name="dlg_caution">Caution</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">CANCEL</string>
    <string name="dlg_loc_sett_ttl">Please activate your phone\'s location services</string>
    <string name="dlg_loc_sett_msg">Tap OK to go to Settings</string>
    <string name="act_intro_switchlang">اُردُو‎</string>
    <string name="act_intro_bt_eng">English</string>
    <string name="act_intro_signin_heading">SIGN IN</string>
    <string name="act_intro_signup_heading">SIGN UP</string>
    <string name="act_intro_forgotpass_heading">FORGOT PASSWORD</string>
    <string name="act_intro_verification_heading">VERIFICATION CODE</string>
    <string name="act_intro_name">Name</string>
    <string name="act_intro_email">Email Address</string>
    <string name="act_intro_phonenum">Mobile Number</string>
    <string name="act_intro_password">Password</string>
    <string name="act_intro_cnfpassword">Confirm Password</string>
    <string name="act_intro_verfcode">Enter Verification OTP</string>
    <string name="act_intro_signin">Sign In</string>
    <string name="act_intro_confirm">CONFIRM</string>
    <string name="act_intro_sendemail">SEND</string>
    <string name="act_intro_change_passw_confirm">CONFIRM</string>
    <string name="act_main_cancel">Cancel</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email Address</string>
    <string name="profile_phonenum">Contact Number</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="Continue">Continue</string>
    <string name="next">Next</string>
    <string name="act_intro_bt_va">VA</string>
    <string name="act_intro_bt_farmer">Farmer</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="submit">Submit</string>
    <string name="enter_cnic">CNIC without dashes</string>
    <string name="cnic_number">CNIC Number</string>
    <string name="welcome"><![CDATA[Welcome to \n Livestock & Dairy Development, Punjab]]></string>
    <string name="whatsapp_mobile">Whatsapp Mobile Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="enter_mobile_number">Enter your mobile number</string>
    <string name="enter_mobile_whatsapp">Enter your WhatsApp number</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dsignation">Designation</string>
    <string name="destrict">District</string>
    <string name="tehsil">Tehsil</string>
    <string name="select_Designation">Select Designation</string>
    <string name="va">VA</string>
    <string name="ait">AIT</string>
    <string name="select_district">Select District</string>
    <string name="select_tehsil">Select Tehsil</string>
    <string name="use_app_as">Use App as</string>
    <string name="welcome_LDD"><![CDATA[Welcome to\n Disease Diagnostic Reporting Surveillance Directorate,\n L&DD, Punjab]]></string>
    <string name="sign_up_nt_received">If OTP not received,\n Click here to resend OTP.</string>
    <string name="enter_OTP">Enter OTP</string>
    <string name="technical_fault_otp">Due to some technical problem, you are not recieving the code via sms, therefore please use verification code:</string>
    <string name="verification_code_send">We have sent a verification OTP on your mobile number.</string>
    <string name="verification_code_send_2"> Please enter the verification OTP below</string>
    <string name="compete_profile">Please complete your profile</string>
    <string name="select_mozah">Select Mauzah</string>
    <string name="complete_farm">Please Complete Farm Profile</string>
    <string name="farm_name">Farm Name</string>
    <string name="number_animal">Number of total animals</string>
    <string name="enter_no_of_animals">Enter number of total animals</string>
    <string name="enter_farm_name">Enter Farm Name</string>
    <string name="speices">Spices</string>
    <string name="population_farm">Population of Farm</string>
    <string name="add_farm">Add Farm</string>
    <string name="add_farm_please">Please add a farm</string>
    <string name="select_spices">Select Spices</string>
    <string name="mozah">Mauzah</string>
    <string name="Address">Address</string>
    <string name="summary">Go to Summary</string>
    <string name="farm_population">Farm wise animal population</string>
    <string name="population">Population</string>
    <string name="my_profile">My Profile</string>
    <string name="inimate_diesease">Intimate Disease</string>
    <string name="my_farm">My Farm</string>
    <string name="message_box">Message Box</string>
    <string name="suggestion">Suggestion</string>
    <string name="large_animal">Large Animals</string>
    <string name="small_animals">Small Animals</string>
    <string name="equine">Equine</string>
    <string name="camael">Camel</string>
    <string name="poularty">Poularty</string>
    <string name="please_select_animal">Please Select Animal in which diease is being reported.</string>
    <string name="name">Name</string>
    <string name="animal_population">Animal populatoin as reported by farmer.</string>
    <string name="father_name">Father Name</string>
    <string name="enter_father_name">Enter Father name</string>
    <string name="Animal_diseases">Animal Diseases</string>
    <string name="animal_disease">Animal Disease</string>
    <string name="date">Date/Time</string>
    <string name="time">Time</string>
    <string name="discription">Description</string>
    <string name="give_suggestions">Give your suggestion</string>
    <string name="please_enter_suggestion">Please enter your suggestions</string>
    <string name="please_enter_subject">Please enter subject</string>
    <string name="farmer_particulars">Farmer Particulars</string>
    <string name="farmer_cnic">Farmer CNIC</string>
    <string name="enter_farmer_cnic">Enter Farmer\'s  CNIC without dashes</string>
    <string name="search_farmer">Search Farmer</string>
    <string name="Following_issues_are_noted">Signs/symptoms noticed</string>
    <string name="Picture_animal">Picture of sick animal</string>
    <string name="take_a_picture">Take picture of sick animal</string>
    <string name="animal_population_on_farm">Animal population on farm</string>
    <string name="add_search">Add a Farm</string>
    <string name="no_sick_animal">No. of sick animals</string>
    <string name="enter_sick">0</string>
    <string name="no_dead_animal">No. of dead animals</string>
    <string name="total_animals">Total Animals</string>
    <string name="select_farm">Select Farm</string>
    <string name="spices">Spices</string>
    <string name="sign_symbtoms">Signs/Symptoms \nNoticed</string>
    <string name="report">Report ID :</string>
    <string name="animal_disease_report">Animal Disease Intimation Report</string>
    <string name="thanks_disease">Thank you for intimating the disease, our officer will visit you soon to collect more details and giving necessary guidance</string>
    <string name="subject">Subject</string>
    <string name="please_add_farm">Please add a new farm.</string>
    <string name="adrs_infro_punjab">ADRS Info Punjab</string>
    <string name="emp_particulars">Employee Particulars</string>
    <string name="add_spice">Add Species</string>
    <string name="your_profile">Your Profile</string>
    <string name="suggestion_history">Suggestions History</string>
    <string name="select_disease">Select Disease</string>
    <string name="select_sign">Select Sign/Symptoms </string>
    <string name="done">Done</string>
    <string name="salect_a_farm_where">Select the farm from where disease is being reported </string>
    <string name="choose_exsisting_farm">Choose existing farm</string>
    <string name="add_new_farm">Add new farm</string>
    <string name="please_wait_while">Please wait while data is being downloaded</string>
    <string name="connection_avail">Internet Connection is available.</string>
    <string name="sync_now">Sync Now</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="farm_name_not_null">Enter farm name</string>
    <string name="farm_population_not_null">Enter farm popullation</string>
    <string name="farm_spices_not_null">Select a species</string>
    <string name="farm_popultn">Farm Population</string>
    <string name="message_sent">Message Sent</string>
    <string name="cnic_number_not_null">CNIC must be provided</string>
    <string name="enter_valid_cnic">Enter valid CNIC</string>
    <string name="empty_farmer_field">Farmer name must be provided</string>
    <string name="empty_cnic_field">CNIC must be provided</string>
    <string name="empty_gender_field">Gender must be provided</string>
    <string name="empty_district_field">District must be selected</string>
    <string name="empty_tehsil_field">Tehsil must be selected</string>
    <string name="Designation">Designation</string>
    <string name="performance_summary">Performance Summary</string>
    <string name="disease_report">Disease Reported</string>
    <string name="reports">Reports</string>
    <string name="Sign_Symptoms_Noticed">Sign/ Symptoms Noticed</string>
    <string name="frg_report_animal_population">Animal \nPopulation</string>
    <string name="gps_network_not_enabled">GPS not enabled</string>
    <string name="open_location_settings">Open Location settings</string>
    <string name="Cancel">Cancel</string>
    <string name="enter_farmer_name">Enter farmer name</string>
    <string name="back">Back</string>
    <string name="act_intro_enter_email">Enter your email</string>
    <string name="act_intro_dob">DOB</string>
    <string name="btn_done">Done</string>
    <string name="enter_your_suggestions">Please enter your suggestions.</string>
    <string name="select_any_disease">Please select any disease</string>
    <string name="no_farm_exist">No Farm exist against this farmer please add a farm first</string>
    <string name="sick_animal_cant">Sick Animals can\'t be zero</string>
    <string name="total_animal_cant">Total Animals can\'t be zero</string>
    <string name="total_never_less">Total animal never less than Sick animals</string>
    <string name="invalid_animal_count">Invalid Animal Count entered</string>
    <string name="enter_otp_that_send">\"Enter Pin Code that has been sent to your PHONE NUMBER\"</string>
    <string name="otp_sent">OTP is sent</string>
    <string name="enter_dob">Enter DoB</string>
    <string name="invalid_cnic">Invalid CNIC</string>
    <string name="enter_your_last_otp_code">Enter your last OTP code</string>
    <string name="enter_otp__old">OTP not matched</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="editProfile">Edit Profile</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="editFarm">Edit Farm</string>
    <string name="add_update_spices">Add/Update Spices</string>
    <string name="please_edit_your">Please edit your farm</string>
    <string name="are_sure_logout">Are you sure to logout?</string>

</resources>
